--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,14 +2,20 @@
 html(lang = "en")
   head
     title some title
+    link(rel='stylesheet', href='/stylesheets/blueprint/screen.css', media="screen, projection")
+    link(rel='stylesheet', href='/stylesheets/blueprint/screen.css', media="screen, projection")
+    link(rel='stylesheet', href='/stylesheets/blueprint/print.css', media="print")
+    // if lt IE8
+      link(rel='stylesheet', href='/stylesheets/blueprint/ie.css', media="screen, projection")
     link(rel='stylesheet', href='/stylesheets/style.css')
     block scripts
       script(src='/javascripts/jquery.js')
       script(src='/javascripts/utilities.js')
       
   body
-    div#content
-      block content
-    block footer
-      a(href="/") home
+    div.container.box.showgrid2
+      div#content
+        block content
+      block footer
+        a(href="/") home
 
