--- a/views/login.jade
+++ b/views/login.jade
@@ -18,7 +18,7 @@ block append scripts
 		});
 
 block content
-	form(method="POST", action="/login")
+	form(method="POST", action="/login")#loginForm
 		div.userinput
 			span Username:  
 			input(type="text", name="username")
