--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -7,7 +7,7 @@ block append scripts
 		var salt = "#{args.salt};"
 
 block append footerLinks
-	a(href="").logOut.span-2.last.small Log out
+	a(href="").logOut.span-2.last Log out
 
 block content
 	div#controls
