--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,7 @@
 html(lang = "en")
   head
     title some title
-    link(rel='stylesheet', href='/stylesheets/blueprint/screen.css', media="screen, projection")
-    link(rel='stylesheet', href='/stylesheets/blueprint/print.css', media="print")
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     block scripts
       script(src='/javascripts/jquery.js')
@@ -15,13 +14,13 @@ html(lang = "en")
         div#headerContainer.container
           span blah
       div#contentBox
-        div#content.container.box.showgrid2
+        div#content.container.showgrid2
           block content
       block footer
         div#footer
           div#footerContainer.container
-            div#footerLinks.span-4.right.last
+            div#footerLinks.row.right
               block footerLinks
-                a(href="/").span-2.first Home
+                a(href="/").span1 Home
             
 
