--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -7,7 +7,7 @@ block append scripts
 		var salt = "#{args.salt};"
 
 block append footerLinks
-	a(href="").logOut.span1 Log out
+	a(href="/", title="Log out").logOut.span1 Log out
 
 block content
 	div#controls
@@ -21,7 +21,7 @@ block content
 			div.entry2header.span4
 				h5.span3.entryUrl
 				a(href="", title="Open the site", target="_blank").entry2Go.buttonSymbol ↗
-				a(href="", title="Delete this record").entry2Delete.buttonSymbol ✕
+				a(href="/", title="Delete this record").entry2Delete.buttonSymbol ✕
 			div.entry2body.span4
 				div.entry2body2.span4
 					input.entryLogin.span-3
@@ -56,7 +56,7 @@ block content
 								option(value="25") 25 symbols
 								option(value="30") 30 symbols
 								option(value="50") 50 symbols
-							a(href="", style="margin-right: 0.2em").generate.buttonSymbol.right ⟳
+							a(href="/", style="margin-right: 0.2em", title="Generate password").generate.buttonSymbol.right ⟳
 							span(style="margin-right: 15px").right
 								span &nbsp;$#%^	
 								input(type="checkbox", checked="true").useSpecials
@@ -64,7 +64,7 @@ block content
 						div
 							input(type="submit", value="Add  ").add.btn.span1
 						div
-							span.userError
+							span.userError 
 
 
 				
