--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 !!!
 html(lang = "en")
   head
-    title some title
+    title 14cube
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     //link(rel='stylesheet', href='/stylesheets/debug.css')
@@ -21,8 +21,7 @@ html(lang = "en")
         div#footer
           div#footerContainer.container
             div#footerLinks.row.right
-              h3 &nbsp;
-              block footerLinks
-                a(href="/", title="Home").span1 Home
+                block footerLinks
+                  a(href="/", title="Home").span1 Home
             
 
